[package]
name = "jpeg_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
scraper = "0.13"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
tokio-util = "0.7"